update index js

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div >
               <h5 id = "textOwner">Are you Owner?</h5>
               <div>
-                <button id="breakerBoton" onclick="App.pauseContract()" type="submit" class="btn btn-primary" >Pausable</button>    
+                <button id="breakerBoton" onclick="App.pauseContract()" type="submit" class="btn btn-primary" >Pause Dapp</button>    
             </div>
             <h6 id = "textStatus" style="color:green"></h6>
               
