--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
              <h3 style="color:blue" class="text-center">Check a Warranty</h3>
               <form onSubmit="App.checkGarantia();return false">
                 <div class="form-group">
-                  <label for="numSerieToCheck">Check Serial Numner</label>
+                  <label for="numSerieToCheck">Check Serial Number</label>
                   <input class="form-control" id="numSerieToCheck">     
                 </div>
                 <button type="submit" class="btn btn-primary">Check</button>   
