--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                   <th scope="col">#</th>
                   <th scope="col">Article</th>
                   <th scope="col">Serial Number</th>
-                  <th scope="col">Warranty starts date</th>
-                  <th scope="col">Warranty ends date</th>
+                  <th scope="col">Warranty Starts date</th>
+                  <th scope="col">Warranty Ends date</th>
                   <th scope="col">Buyer Address</th>  
                 </tr>
               </thead>
@@ -60,7 +60,7 @@
                   <input class="form-control" id="numSerieToCheck">     
                 </div>
                 <button type="submit" class="btn btn-primary">Check</button>   
-                <h5 id="address" style="color:green">Address Select: </h5>                
+                <h5 id="address" style="color:green">Address Selected: </h5>                
             </form>  
           
           </div> <!-- Table end --> 
