Update web3 dependencies

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                   <th scope="col">#</th>
                   <th scope="col">Article</th>
                   <th scope="col">Serial Number</th>
-                  <th scope="col">Warranty Starts date</th>
-                  <th scope="col">Warranty Ends date</th>
+                  <th scope="col">Warranty starts date</th>
+                  <th scope="col">Warranty ends date</th>
                   <th scope="col">Buyer Address</th>  
                 </tr>
               </thead>
@@ -56,11 +56,11 @@
              <h3 style="color:blue" class="text-center">Check a Warranty</h3>
               <form onSubmit="App.checkGarantia();return false">
                 <div class="form-group">
-                  <label for="numSerieToCheck">Check Serial Number</label>
+                  <label for="numSerieToCheck">Check Serial Numner</label>
                   <input class="form-control" id="numSerieToCheck">     
                 </div>
                 <button type="submit" class="btn btn-primary">Check</button>   
-                <h5 id="address" style="color:green">Address Selected: </h5>                
+                <h5 id="address" style="color:green">Address Select: </h5>                
             </form>  
           
           </div> <!-- Table end --> 
