--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
           <h1 style="color:blue"  class="text-center">Warranty of Products</h1>
           <hr/>
           <br/>
-           <!-- Element that loads until metamask is sync
+           <!-- Element that loads until metamask is sync 
           <div id="loader" align ="center">
-            <p id= "textLoader" class="text-center"></p>       
-            <img width = "100 " src="https://loading.io/spinners/double-ring/lg.double-ring-spinner.gif">   
+         
+            <img width = "100 " src="\favicon.png">   
           </div> --> 
          
           <!-- Table elements --> 
